Image page working! Thanks, Thymeleaf

--- a/src/main/resources/templates/image.html
+++ b/src/main/resources/templates/image.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>SpeedChess</title>
+        <title>Image</title>
     </head>
 
     <body>
-        <h1>Welcome to SpeedChess!</h1>
+        <img th:src="@{/images/gimp.png}" alt="gimp.png">
     </body>
 </html>
