--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>SpeedChess</title>
+        <script type="text/javascript" th:src="@{/js/index.js}"></script>
     </head>
 
     <body>
         <h1>Welcome to SpeedChess!</h1>
+        <button onclick="logHi()">Log hi</button>
     </body>
 </html>
