Working jQuery get, but import sucks

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>SpeedChess</title>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" th:src="@{/js/index.js}"></script>
     </head>
 
     <body>
         <h1>Welcome to SpeedChess!</h1>
         <button onclick="logHi()">Log hi</button>
+        <button onclick="logTime()">Log time</button>
     </body>
 </html>
